Bug 327023 - List of of contacts in room not sorted
Summary: List of of contacts in room not sorted
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-02 09:14 UTC by David Edmundson
Modified: 2013-11-02 09:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-11-02 09:14:30 UTC
List of of contacts in room not sorted
Comment 1 David Edmundson 2013-11-02 09:18:47 UTC
Git commit 315d9e6109a273022a56880b1e0d7b37345c93ae by David Edmundson, on behalf of Ilya Katsnelson.
Committed on 02/11/2013 at 09:17.
Pushed by davidedmundson into branch 'kde-telepathy-0.7'.

Fix sorting in MUC contact list

REVIEW: 113579
FIXED-IN: 0.7.1

M  +3    -0    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/315d9e6109a273022a56880b1e0d7b37345c93ae