Fix sorting in MUC contact list

REVIEW: 113579
BUG: 327023
FIXED-IN: 0.7.1